# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.8 2007/04/03 16:43:55 armin76 Exp $

*rb_libtorrent-0.12_rc2 (03 Apr 2007)

  03 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.12_rc2.ebuild:
  Version bump

  18 Mar 2007; Peter Weller <welp@gentoo.org> rb_libtorrent-0.11.ebuild:
  Stable on amd64, keyworded ~x86-fbsd

  18 Mar 2007; Raúl Porcel <armin76@gentoo.org> rb_libtorrent-0.11.ebuild:
  Make it work with g/fbsd, thanks to welp for testing

  14 Mar 2007; Raúl Porcel <armin76@gentoo.org> rb_libtorrent-0.11.ebuild:
  Use -mt prefix for the boost libs, thanks to Peter Koeleman
  <peter@peerweb.nl> for reporting, bug 170887

  14 Feb 2007; Raúl Porcel <armin76@gentoo.org> rb_libtorrent-0.11.ebuild:
  Fix built_with_use, thanks to Constantine D. Kardaris <ckardaris at gmail
  dot com>, bug 166834

  13 Feb 2007; Raúl Porcel <armin76@gentoo.org> rb_libtorrent-0.11.ebuild:
  x86 stable

*rb_libtorrent-0.11 (08 Jan 2007)

  08 Jan 2007; <armin@gentoo.org> +metadata.xml, +rb_libtorrent-0.11.ebuild:
  New ebuild, from bug 148667
