@@ -1,3 +1,0 @@
-MD5 4c41307c268ed139d21b2db01cfa5f14 libtorrent-0.12rc2.tar.gz 1180061
-RMD160 7517525a960333a6be281ef6e8b35cd6c494bab6 libtorrent-0.12rc2.tar.gz 1180061
-SHA256 066be0a2b4e9e89152a1cd1bba4c672f2b1b0b4735e448644061606e1fd1f64e libtorrent-0.12rc2.tar.gz 1180061
