@@ -1,0 +1,3 @@
+MD5 1c3446c5164be73aeece681b05e1eded rb_libtorrent-0.12_rc2_p1071.tar.gz 1781143
+RMD160 8116350d4a1a52e873967aae52bb7ec56bca6ede rb_libtorrent-0.12_rc2_p1071.tar.gz 1781143
+SHA256 c564909b627ac456b106564e6e514aab78dc4cf042177f9e3fa2d9e648b54238 rb_libtorrent-0.12_rc2_p1071.tar.gz 1781143
