@@ -1,17 +1,16 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/rb_libtorrent-0.12_rc2.ebuild,v 1.1 2007/04/03 16:43:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/rb_libtorrent-0.12_rc2_p1071.ebuild,v 1.1 2007/04/13 13:55:16 armin76 Exp $
 
 WANT_AUTOCONF="latest"
 WANT_AUTOMAKE="latest"
 inherit eutils autotools
 
 MY_P="${P/rb_/}"
-S="${WORKDIR}/${MY_P}"
 
 DESCRIPTION="BitTorrent library written in C++ for *nix."
 HOMEPAGE="http://www.rasterbar.com/products/libtorrent/"
-SRC_URI="http://www.libtorrent.org/${MY_P/_/}.tar.gz"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -22,7 +21,7 @@ DEPEND="dev-libs/boost
 	!net-libs/libtorrent"
 RDEPEND="${DEPEND}"
 
-S="${WORKDIR}/${MY_P/_rc2/}"
+S="${WORKDIR}/libtorrent-0.12rc2+svn.r1071.20070410"
 
 pkg_setup() {
 	# We need boost built with threads
