@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/rb_libtorrent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.8 2007/04/03 16:43:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.9 2007/04/13 13:55:16 armin76 Exp $
+
+*rb_libtorrent-0.12_rc2_p1071 (13 Apr 2007)
+
+  13 Apr 2007; Raúl Porcel <armin76@gentoo.org>
+  -rb_libtorrent-0.12_rc2.ebuild, +rb_libtorrent-0.12_rc2_p1071.ebuild:
+  Version bump
 
 *rb_libtorrent-0.12_rc2 (03 Apr 2007)
 
